[project]
name = "encrypt"
description = "ComfyUI custom nodes for RSA image encryption using asymmetric cryptography with key generation, encryption, and decryption functions via the cryptography library. (Description by CC)"
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]

dependencies = ["cryptography>=3.4.8", "Pillow>=9.0.0", "pytest>=7.0.0", "numpy>=1.20.0"]

[project.urls]
Repository = "https://github.com/SilentZhang/comfyui-encrypt"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/SilentZhang/comfyui-encrypt/wiki"
"Bug Tracker" = "https://github.com/SilentZhang/comfyui-encrypt/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-encrypt"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

